--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img class="banner" src="images/banner.png">
         <h1 class="restaurant-name">Jimmy's Diner</h1>
-        <h3 class="retaurant-motto">The best burgers and pizzas in town</h3>
+        <h3 class="restaurant-motto">The best burgers and pizzas in town</h3>
     </header>
     <main>
         <div class="menu" id="menuHTML">
@@ -29,15 +29,15 @@
                 <button class="complete-order-btn">Complete order</button>
             </div>
         </div>
-        <modal>
-            <form class="card-details-form">
-                <div>Enter card details</div>
-                <input type="text">
-                <input type="number">
-                <input type="number">
-                <button>Pay</button>
-            </form>
-        </modal>
     </main>
+    <modal>
+        <form class="card-details-form">
+            <div class="card-details-title">Enter card details</div>
+            <input type="text" placeholder="Enter your name">
+            <input type="number" placeholder="Enter card number">
+            <input type="number" placeholder="Enter CVV">
+            <button>Pay</button>
+        </form>
+    </modal>
 </body>
 </html>
