more edits to modal

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <div id="order-total-price"></div>
             </div>
             <div class="complete-order-btn-div">
-                <button class="complete-order-btn">Complete order</button>
+                <button class="complete-order-btn data-completeorder" id="complete-order-btn">Complete order</button>
             </div>
         </div>
     </main>
-    <modal>
+    <modal class="card-details-modal hidden">
         <form class="card-details-form">
             <div class="card-details-title">Enter card details</div>
             <input type="text" placeholder="Enter your name">
