--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Smythe&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css"/>
+    <!-- <script src="../../../../Luna/node_modules/animejs/lib/anime.min.js"></script> -->
+    <!-- <script src=”https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js”></script> -->
     <script src="index.js" type="module"></script>
+    <script src="anime.min.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -16,8 +20,7 @@
         <h3 class="restaurant-motto">The best burgers and pizzas in town</h3>
     </header>
     <main>
-        <div class="menu" id="menuHTML">
-        </div>
+        <div class="menu" id="menuHTML"></div>
         <div class="your-order hidden">
             <h3 class="order-header">Your order</h3>
             <div id="order-summary"></div>
